# satori-rs

./: Cargo.toml  LICENSE  README.md
examples/: min_app.rs  min_sdk.rs
src/: lib.rs  structs.rs
src/net/: app.rs  mod.rs  sdk.rs
